--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
+    "redux": "^4.0.1",
     "sweetalert": "^2.1.2"
   },
   "scripts": {
@@ -36,7 +37,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }, 
+  },
   "proxy": "http://localhost:6969",
-  "main":"server/index.js" 
+  "main": "server/index.js"
 }
