--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "aws-amplify": "^1.1.29",
+    "aws-sdk": "^2.479.0",
     "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "dotenv": "^8.0.0",
