--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.8.6",
     "react-animated-slider": "^1.1.4",
     "react-dom": "^16.8.6",
+    "react-evil-icons": "^0.5.0",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
